--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/styles.css" />
     <script src="./assets/js/script.js" defer></script>
-    <title>Gym Website</title>
+    <title>Gym & Fitness</title>
   </head>
   <body class="bg-dark text-white">
     <nav
